Updating skeletons for Azul with FX built in. No More module-info.java!!